err/lojbansuggest.err
Listing '.'...
Listing './bin'...
Compiling './bin/lojbantreeproj.py'...
***   File "./bin/lojbantreeproj.py", line 55
    print "wait done. socks: ", rsocks
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/suggest.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/camxes.py'...
***   File "./lib/python3.5/site-packages/camxes.py", line 99
    print "could not find camxes by using locate, looking into",
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lojbansuggest'...
Compiling './lib/python3.5/site-packages/lojbansuggest/suggest.py'...
***   File "./lib/python3.5/site-packages/lojbansuggest/suggest.py", line 167
    print "\n".join([str(it) for it in self.items])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lojbansuggest/tree.py'...
***   File "./lib/python3.5/site-packages/lojbansuggest/tree.py", line 291
    print "tree:", tree
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lojbansuggest-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/lojbantools-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
